# projet_spi

./: CMakeLists.txt  README  blabla.tex
lib/: CMakeLists.txt  student.cpp
test/: CMakeLists.txt  test1.cpp  test2.cpp
